Users can now follow projects. Added follow/unfollow actions in projects_controller Added uniqueness validation in membership model Fixed has_many :through association statement to new rails 3 syntax in project model Fixed has_many :through association statement to new rails 3 syntax in user model Added has_many :memberships association in user model Added a method follows_project? in user model Added Buttons to follow/unfollow in project show view Added new translation strings for following/unfollowing for :de, :en Added new seeds for following/unfollowing
This commit fixes #20.

--- a/config/locales/views/projects/de.yml
+++ b/config/locales/views/projects/de.yml
@@ -1,3 +1,9 @@
 ---
 de:
-  
+  projects:
+    follow: 'Folgen'
+    unfollow: 'Entfolgen'
+    follow_success: 'Du folgst jetzt: '
+    follow_success: 'Du folgst jetzt nicht mehr: '
+    follow_error: 'Fehler beim verfolgen von: '
+    unfollow_error: 'Fehler beim entfolgen: '
