--- a/config/locales/views/projects/en.yml
+++ b/config/locales/views/projects/en.yml
@@ -7,4 +7,4 @@ en:
     unfollow_success: 'You unfollowed: '
     follow_error: 'Error following: '
     unfollow_error: 'Error unfollowing: '
-
+    back_to_timeline: 'back to Timeline'
