* Fixed language fallback. Mapping languages should be better thought through. * Added some missing language strings * Language selectors  on bottom of the page are now generated dynamically

--- a/config/locales/views/projects/de.yml
+++ b/config/locales/views/projects/de.yml
@@ -4,7 +4,16 @@ de:
     follow: 'Folgen'
     unfollow: 'Entfolgen'
     follow_success: 'Du folgst jetzt: '
-    follow_success: 'Du folgst jetzt nicht mehr: '
+    unfollow_success: 'Du folgst jetzt nicht mehr: '
     follow_error: 'Fehler beim verfolgen von: '
     unfollow_error: 'Fehler beim entfolgen: '
     back_to_timeline: 'zurück zur Timeline'
+    edit: 'Projekt editieren'
+    role:
+      name: 'Name'
+      manager: 'Manager'
+      developer: 'Entwickler'
+      contributor: 'Mitwirkender'
+      user: 'User'
+    membership:
+      change: 'ändern'
